fixed styles on mobile

--- a/src/assets/_base.scss
+++ b/src/assets/_base.scss
@@ -175,7 +175,6 @@ body {
         h1 {
           font-size: 3em;
           font-weight: 800;
-          line-height: 1.2em;
           margin: 0 0 0.5em;
 
           @media (max-width: 1024px) {
